[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Evan Grim <evan@mirgnave.com>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
